# workflow-automation-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  cli.py  docker-compose.yml  grpc_server.py  main.py  pyproject.toml  requirements.txt  worker.py
api/grpc/: execution_service.py
api/grpc/execution/: ray_executor.py  redis_queue.py
api/grpc/proto/: execution.proto  execution_pb2.py  execution_pb2_grpc.py
api/rest/: workflows.py
bruno/: add_task.bru  bruno.json  create_workflow.bru  delete_task.bru  delete_workflow.bru  get_workflow.bru  list_workflows.bru  read_root.bru  update_task.bru  update_workflow.bru
cache/: redis_cache.py
core/: config.py  database_service.py
db/: models.py  session.py
scripts/: generate_proto.sh
tests/: conftest.py  test_grpc.py  test_integration.py  test_redis.py  test_rest.py
